[gd_scene load_steps=4 format=3 uid="uid://b1wxsghutirw0"]

[ext_resource type="Script" uid="uid://04c5iy7xunf5" path="res://scenes/play_scene.gd" id="1_a0jw4"]
[ext_resource type="Script" uid="uid://b2o4rsmyktar7" path="res://characters/character.gd" id="2_5i074"]
[ext_resource type="Resource" uid="uid://0bgbunfojqx2" path="res://characters/rui/rui.tres" id="3_5uqcj"]

[node name="PlayScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0jw4")
characters = Array[ExtResource("2_5i074")]([ExtResource("3_5uqcj")])

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="Backgrounds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprites" type="Control" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 11

[node name="Save" type="Button" parent="CanvasLayer"]
offset_left = 1801.0
offset_top = 13.0
offset_right = 1852.0
offset_bottom = 47.0
text = "Save"

[node name="Load" type="Button" parent="CanvasLayer"]
offset_left = 1855.0
offset_top = 11.0
offset_right = 1903.0
offset_bottom = 45.0
text = "load"
